--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -344,6 +344,63 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        .container__image__aside {
+            // position: absolute;
+            // display: flex;
+            // align-items: center;
+            // justify-content: center;
+            width: 100%;
+            height: 230px;
+            &__hand {
+                position: absolute;
+                right: 0;
+            }
+            // &__light {
+            //     position: absolute;
+            //     left: 0;
+            // }
+        }
+        .container__info__slogan {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px;
+            @include responsive-desktop {
+                flex-direction: row;
+                align-items: normal;
+            }
+            h2 {
+                font-size: 35px;
+                font-weight: 900;
+                text-align: left;
+
+                @include responsive-tablet {
+                    width: auto;
+                    font-size: 50px;
+                }
+                @include responsive-desktop {
+                    font-size: 65px;
+                    text-align: left;
+                    width: 45%;
+                    margin-top: 150px;
+                    margin-left: 100px;
+                }
+            }
+            &__phone__square {
+                height: 186px;
+                width: 350px;
+                margin-top: 10px;
+                @include responsive-tablet {
+                    height: 345px;
+                    width: 648px;
+                }
+                @include responsive-desktop {
+                    height: 500px;
+                    width: 55%;
+                }
+            }
+        }
         .container__contact {
             display: flex;
             flex-direction: column-reverse;
@@ -386,6 +443,12 @@ body {
                 max-height: 799px;
                 margin-bottom: 51px;
             }
+            &__homepage {
+                // margin: 0px 0px;
+                @include responsive-desktop {
+                    // margin-bottom: 10px;
+                }
+            }
             h3 {
                 font-size: 30px;
                 font-weight: $font-weight-title;
@@ -394,7 +457,7 @@ body {
                 margin-bottom: 20px;
                 @include responsive-desktop {
                     font-size: 60px;
-                    margin-bottom: 0px;
+                    // margin-bottom: 0px;
                 }
             }
             &__yellow__rectangle {
