--- a/base/public/assets/css/main.css
+++ b/base/public/assets/css/main.css
@@ -492,7 +492,6 @@ body main {
   justify-content: center;
   align-items: center;
 }
-
 body main .container__company__info {
   display: flex;
   flex-direction: column;
@@ -660,70 +659,6 @@ body main .container__people__svg {
   }
 }
 body .container__contact {
-
-body main .container__image__aside {
-  width: 100%;
-  height: 230px;
-}
-body main .container__image__aside__hand {
-  position: absolute;
-  right: 0;
-}
-body main .container__info__slogan {
-  display: flex;
-  flex-direction: column;
-  margin: 20px 10px 0px;
-  gap: 25px;
-}
-@media screen and (min-width: 1440px) {
-  body main .container__info__slogan {
-    flex-direction: row;
-    align-items: normal;
-    gap: 0px;
-    justify-content: end;
-    margin: 20px 0px 0px;
-  }
-}
-body main .container__info__slogan h2 {
-  font-size: 35px;
-  font-weight: 900;
-  text-align: left;
-  font-family: "Inter", sans-serif;
-}
-@media screen and (min-width: 376px) and (max-width: 1439px) {
-  body main .container__info__slogan h2 {
-    width: auto;
-    font-size: 50px;
-  }
-}
-@media screen and (min-width: 1440px) {
-  body main .container__info__slogan h2 {
-    font-size: 68px;
-    text-align: left;
-    width: 45%;
-    margin-top: 150px;
-    margin-left: 100px;
-  }
-}
-body main .container__info__slogan__phone__square {
-  height: 186px;
-  width: 350px;
-  margin-top: 10px;
-}
-@media screen and (min-width: 376px) and (max-width: 1439px) {
-  body main .container__info__slogan__phone__square {
-    height: 345px;
-    width: 648px;
-  }
-}
-@media screen and (min-width: 1440px) {
-  body main .container__info__slogan__phone__square {
-    height: 500px;
-    width: 55%;
-  }
-}
-body main .container__contact {
-
   display: flex;
   flex-direction: column-reverse;
 }
@@ -852,6 +787,7 @@ body .container__table h3 {
 @media screen and (min-width: 1224px) {
   body .container__table h3 {
     font-size: 60px;
+    margin-bottom: 0px;
   }
 }
 body .container__table__yellow__rectangle {
