--- a/base/public/assets/css/main.css
+++ b/base/public/assets/css/main.css
@@ -492,6 +492,67 @@ body main {
   justify-content: center;
   align-items: center;
 }
+body main .container__image__aside {
+  width: 100%;
+  height: 230px;
+}
+body main .container__image__aside__hand {
+  position: absolute;
+  right: 0;
+}
+body main .container__info__slogan {
+  display: flex;
+  flex-direction: column;
+  margin: 20px 10px 0px;
+  gap: 25px;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__info__slogan {
+    flex-direction: row;
+    align-items: normal;
+    gap: 0px;
+    justify-content: end;
+    margin: 20px 0px 0px;
+  }
+}
+body main .container__info__slogan h2 {
+  font-size: 35px;
+  font-weight: 900;
+  text-align: left;
+  font-family: "Inter", sans-serif;
+}
+@media screen and (min-width: 376px) and (max-width: 1023px) {
+  body main .container__info__slogan h2 {
+    width: auto;
+    font-size: 50px;
+  }
+}
+@media screen and (min-width: 1224px) {
+  body main .container__info__slogan h2 {
+    font-size: 68px;
+    text-align: left;
+    width: 45%;
+    margin-top: 150px;
+    margin-left: 100px;
+  }
+}
+body main .container__info__slogan__phone__square {
+  height: 186px;
+  width: 350px;
+  margin-top: 10px;
+}
+@media screen and (min-width: 376px) and (max-width: 1023px) {
+  body main .container__info__slogan__phone__square {
+    height: 345px;
+    width: 648px;
+  }
+}
+@media screen and (min-width: 1224px) {
+  body main .container__info__slogan__phone__square {
+    height: 500px;
+    width: 55%;
+  }
+}
 body main .container__company__info {
   display: flex;
   flex-direction: column;
@@ -807,22 +868,22 @@ body .container__table__yellow__rectangle {
     left: 157px;
   }
 }
-body .container__table .table__container {
+body .table__container {
   overflow-y: auto;
   white-space: nowrap;
   width: 350px;
 }
 @media screen and (min-width: 1224px) {
-  body .container__table .table__container {
+  body .table__container {
     width: 1200px;
     overflow-y: none;
     white-space: none;
   }
 }
-body .container__table .table__container .label_search {
+body .table__container .label_search {
   color: rgba(145, 158, 171, 0);
 }
-body .container__table .table__container input {
+body .table__container input {
   height: 35px;
   width: 200px;
   align-self: flex-end;
@@ -836,34 +897,207 @@ body .container__table .table__container input {
   text-align: center;
 }
 @media screen and (min-width: 1224px) {
-  body .container__table .table__container input {
+  body .table__container input {
     margin-bottom: 42px;
     height: 53px;
     width: 245px;
     font-size: 20px;
   }
 }
-body .container__table .table__container__info {
+body .table__container__info {
   width: 1200px;
   font-size: 20px;
   font-weight: 600;
 }
-body .container__table .table__container__info__thead {
+body main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+body main .container__image__aside {
+  width: 100%;
+  height: 230px;
+}
+body main .container__image__aside__hand {
+  position: absolute;
+  right: 0;
+}
+body main .container__info__slogan {
+  display: flex;
+  flex-direction: column;
+  margin: 20px 10px 0px;
+  gap: 25px;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__info__slogan {
+    flex-direction: row;
+    align-items: normal;
+    gap: 0px;
+    justify-content: end;
+    margin: 20px 0px 0px;
+  }
+}
+body main .container__info__slogan h2 {
+  font-size: 35px;
+  font-weight: 900;
+  text-align: left;
+  font-family: "Inter", sans-serif;
+}
+@media screen and (min-width: 376px) and (max-width: 1023px) {
+  body main .container__info__slogan h2 {
+    width: auto;
+    font-size: 50px;
+  }
+}
+@media screen and (min-width: 1224px) {
+  body main .container__info__slogan h2 {
+    font-size: 68px;
+    text-align: left;
+    width: 45%;
+    margin-top: 150px;
+    margin-left: 100px;
+  }
+}
+body main .container__info__slogan__phone__square {
+  height: 186px;
+  width: 350px;
+  margin-top: 10px;
+}
+@media screen and (min-width: 376px) and (max-width: 1023px) {
+  body main .container__info__slogan__phone__square {
+    height: 345px;
+    width: 648px;
+  }
+}
+@media screen and (min-width: 1224px) {
+  body main .container__info__slogan__phone__square {
+    height: 500px;
+    width: 55%;
+  }
+}
+body main .container__contact {
+  display: flex;
+  flex-direction: column-reverse;
+}
+body main .container__contact__info__name h5 {
+  font-size: 30px;
+  font-weight: 900;
+}
+body main .container__contact__info__name__yellow {
+  width: 200px;
+  height: 17px;
+  background-color: #f9de4e;
+}
+body main .container__contact__photo {
+  height: 125px;
+  width: 125px;
+  background-color: red;
+  border-radius: 50%;
+  margin-bottom: 15px;
+  align-self: center;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__contact__photo {
+    height: 255px;
+    width: 255px;
+  }
+}
+body main .container__table {
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+  position: relative;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__table {
+    width: 1193px;
+    max-height: 799px;
+    margin-bottom: 51px;
+  }
+}
+body main .container__table h3 {
+  font-size: 30px;
+  font-weight: 900;
+  font-family: "Inter", sans-serif;
+  z-index: 1;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__table h3 {
+    font-size: 60px;
+  }
+}
+body main .container__table__yellow__rectangle {
+  width: 142px;
+  height: 13px;
+  background-color: #f9de4e;
+  position: absolute;
+  top: 15px;
+  left: 76px;
+  z-index: -1;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__table__yellow__rectangle {
+    width: 284px;
+    height: 27px;
+    top: 37px;
+    left: 157px;
+  }
+}
+body main .container__table #searchbar {
+  height: 35px;
+  width: 200px;
+  align-self: flex-end;
+  color: #636363;
+  border: 1px solid #636363;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: 300;
+  font-family: "Inter", sans-serif;
+  margin-bottom: 20px;
+  text-align: center;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__table #searchbar {
+    margin-bottom: 42px;
+    height: 53px;
+    width: 245px;
+  }
+}
+body main .container__table .table__container {
+  overflow-y: auto;
+  white-space: nowrap;
+  width: 350px;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__table .table__container {
+    width: 1200px;
+    overflow-y: none;
+    white-space: none;
+  }
+}
+body main .container__table .table__container__info {
+  width: 1200px;
+  font-size: 20px;
+  font-weight: 600;
+}
+body main .container__table .table__container__info__thead {
   height: 55px;
   background-color: #f9de4e;
 }
-body .container__table .table__container__info__thead__tr th {
+body main .container__table .table__container__info__thead__tr th {
   vertical-align: middle;
   text-align: left;
 }
-body .container__table .table__container__info__tbody__tr td {
+body main .container__table .table__container__info__tbody__tr td {
   height: 55px;
   vertical-align: middle;
 }
-body .container__table .table__container__info__tbody__tr td a {
+body main .container__table .table__container__info__tbody__tr td a {
   text-decoration: none;
   color: black;
 }
-body .container__table .table__container__info__tbody__tr:nth-child(even) {
+body main .container__table .table__container__info__tbody__tr:nth-child(even) {
   background-color: #f5f5f5;
 }/*# sourceMappingURL=main.css.map */
