--- a/base/public/assets/css/main.css
+++ b/base/public/assets/css/main.css
@@ -1831,7 +1831,6 @@ body main #myTable_paginate a:hover {
     grid-area: companies;
   }
 }
-
 .dashboard .main__dashboard .container__dynamic {
   width: 375px;
   display: flex;
@@ -1863,6 +1862,21 @@ body main #myTable_paginate a:hover {
   margin-left: 30px;
   padding-top: 35px;
 }
+@media screen and (min-width: 1224px) {
+  .dashboard .main__dashboard .container__dynamic__dashboard h4 {
+    padding-top: 53px;
+  }
+}
+.dashboard .main__dashboard .container__dynamic__dashboard hr {
+  border: 1px solid #e0e0e0;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .main__dashboard .container__dynamic__dashboard hr {
+    width: 981px;
+    margin-bottom: 39px;
+  }
+}
 .dashboard .main__dashboard .container__dynamic__dashboard__modify {
   width: 340px;
   overflow-y: scroll;
@@ -1892,6 +1906,7 @@ body main #myTable_paginate a:hover {
 @media screen and (min-width: 1224px) {
   .dashboard .main__dashboard .container__dynamic__dashboard__modify .label_search input {
     margin-bottom: 42px;
+    margin-right: 53px;
     height: 53px;
     width: 245px;
     font-size: 20px;
@@ -1911,6 +1926,7 @@ body main #myTable_paginate a:hover {
   .dashboard .main__dashboard .container__dynamic__dashboard__invoices__new {
     width: 1044px;
     margin-left: 0px;
+    margin-bottom: 35px;
   }
 }
 .dashboard .main__dashboard .container__dynamic__dashboard__invoices__new h4 {
@@ -1933,6 +1949,7 @@ body main #myTable_paginate a:hover {
 @media screen and (min-width: 1224px) {
   .dashboard .main__dashboard .container__dynamic__dashboard__invoices__new hr {
     width: 981px;
+    margin-bottom: 39px;
   }
 }
 .dashboard .main__dashboard .container__dynamic__dashboard__invoices__new form {
@@ -1953,6 +1970,7 @@ body main #myTable_paginate a:hover {
   border-style: none;
   font-size: 20px;
   font-weight: 100;
+  text-align: left;
 }
 .dashboard .main__dashboard .container__dynamic__dashboard__invoices__new form input:last-child {
   background-color: #9698d6;
@@ -1981,6 +1999,172 @@ body main #myTable_paginate a:hover {
     margin-bottom: 45px;
   }
 }
+.dashboard .main__dashboard .container__dynamic__dashboard__company__new {
+  background-color: #ffffff;
+  border-radius: 10px;
+  margin-left: 35px;
+  box-shadow: 0px 0px 37px -21px rgba(0, 0, 0, 0.2509803922);
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .main__dashboard .container__dynamic__dashboard__company__new {
+    width: 1044px;
+    margin-left: 0px;
+    margin-bottom: 35px;
+  }
+}
+.dashboard .main__dashboard .container__dynamic__dashboard__company__new h4 {
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  margin-left: 30px;
+  padding-top: 35px;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .main__dashboard .container__dynamic__dashboard__company__new h4 {
+    width: 1044px;
+    padding-top: 53px;
+  }
+}
+.dashboard .main__dashboard .container__dynamic__dashboard__company__new hr {
+  border: 1px solid #e0e0e0;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .main__dashboard .container__dynamic__dashboard__company__new hr {
+    width: 981px;
+    margin-bottom: 39px;
+  }
+}
+.dashboard .main__dashboard .container__dynamic__dashboard__company__new form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .main__dashboard .container__dynamic__dashboard__company__new form {
+    width: 1044px;
+  }
+}
+.dashboard .main__dashboard .container__dynamic__dashboard__company__new form input {
+  margin-bottom: 20px;
+  width: 320px;
+  height: 36px;
+  background-color: #f5f5f5;
+  border-style: none;
+  font-size: 20px;
+  font-weight: 100;
+  text-align: left;
+}
+.dashboard .main__dashboard .container__dynamic__dashboard__company__new form input:last-child {
+  background-color: #9698d6;
+  color: white;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .main__dashboard .container__dynamic__dashboard__company__new form input {
+    width: 978px;
+    height: 60px;
+    margin-bottom: 45px;
+  }
+}
+.dashboard .main__dashboard .container__dynamic__dashboard__company__new form select {
+  margin-bottom: 20px;
+  width: 320px;
+  height: 36px;
+  background-color: #f5f5f5;
+  border-style: none;
+  font-size: 20px;
+  font-weight: 100;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .main__dashboard .container__dynamic__dashboard__company__new form select {
+    width: 978px;
+    height: 60px;
+    margin-bottom: 45px;
+  }
+}
+.dashboard .main__dashboard .container__dynamic__dashboard__contact__new {
+  background-color: #ffffff;
+  border-radius: 10px;
+  margin-left: 35px;
+  box-shadow: 0px 0px 37px -21px rgba(0, 0, 0, 0.2509803922);
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .main__dashboard .container__dynamic__dashboard__contact__new {
+    width: 1044px;
+    margin-left: 0px;
+    margin-bottom: 35px;
+  }
+}
+.dashboard .main__dashboard .container__dynamic__dashboard__contact__new h4 {
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  margin-left: 30px;
+  padding-top: 35px;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .main__dashboard .container__dynamic__dashboard__contact__new h4 {
+    width: 1044px;
+    padding-top: 53px;
+  }
+}
+.dashboard .main__dashboard .container__dynamic__dashboard__contact__new hr {
+  border: 1px solid #e0e0e0;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .main__dashboard .container__dynamic__dashboard__contact__new hr {
+    width: 981px;
+    margin-bottom: 39px;
+  }
+}
+.dashboard .main__dashboard .container__dynamic__dashboard__contact__new form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .main__dashboard .container__dynamic__dashboard__contact__new form {
+    width: 1044px;
+  }
+}
+.dashboard .main__dashboard .container__dynamic__dashboard__contact__new form input {
+  margin-bottom: 20px;
+  width: 320px;
+  height: 36px;
+  background-color: #f5f5f5;
+  border-style: none;
+  font-size: 20px;
+  font-weight: 100;
+  text-align: left;
+}
+.dashboard .main__dashboard .container__dynamic__dashboard__contact__new form input:last-child {
+  background-color: #9698d6;
+  color: white;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .main__dashboard .container__dynamic__dashboard__contact__new form input {
+    width: 978px;
+    height: 60px;
+    margin-bottom: 45px;
+  }
+}
+.dashboard .main__dashboard .container__dynamic__dashboard__contact__new form select {
+  margin-bottom: 20px;
+  width: 320px;
+  height: 36px;
+  background-color: #f5f5f5;
+  border-style: none;
+  font-size: 20px;
+  font-weight: 100;
+}
+@media screen and (min-width: 1224px) {
+  .dashboard .main__dashboard .container__dynamic__dashboard__contact__new form select {
+    width: 978px;
+    height: 60px;
+    margin-bottom: 45px;
+  }
+}
 .dashboard #new__invoices {
   display: none;
 }
@@ -1989,4 +2173,69 @@ body main #myTable_paginate a:hover {
 }
 .dashboard #new__contact {
   display: none;
+}
+
+.error {
+  min-height: 100vh;
+  width: 100%;
+  background-image: url("../img/error.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media screen and (min-width: 1224px) {
+  .error {
+    background-size: 100% 100%;
+  }
+}
+.error__message {
+  position: absolute;
+  z-index: 1;
+  min-height: 20vh;
+  width: 70%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 40vh 15%;
+  padding: 50px auto;
+  gap: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 2px solid #000;
+  border-radius: 20px;
+  font-family: "Roboto", serif;
+}
+@media screen and (min-width: 1224px) {
+  .error__message {
+    width: 40%;
+    margin: 40vh 30%;
+  }
+}
+.error__message__text {
+  font-size: 20px;
+}
+@media screen and (min-width: 376px) and (max-width: 1023px) {
+  .error__message__text {
+    font-size: 30px;
+  }
+}
+.error__message__homelink a {
+  color: #000;
+  text-decoration: none;
+}
+@media screen and (min-width: 376px) and (max-width: 1023px) {
+  .error__message__homelink a {
+    font-size: 25px;
+  }
+}
+.error__message__homelink a:hover {
+  color: rgba(0, 0, 0, 0.4549019608);
+  text-decoration: underline;
+}
+.error__message__homelink a:active {
+  color: #000;
+  background-color: #f9de4e;
+  text-decoration: underline;
 }/*# sourceMappingURL=main.css.map */
