--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -1776,6 +1776,17 @@ body {
           font-weight: $font-weight-title-dashboard;
           margin-left: 30px;
           padding-top: 35px;
+          @include responsive-desktop {
+            padding-top: 53px;
+          }
+        }
+        hr {
+          border: 1px solid #e0e0e0;
+          margin-bottom: 20px;
+          @include responsive-desktop {
+            width: 981px;
+            margin-bottom: 39px;
+          }
         }
 
         &__modify {
@@ -1801,6 +1812,7 @@ body {
               text-align: center;
               @include responsive-desktop {
                 margin-bottom: 42px;
+                margin-right: 53px;
                 height: 53px;
                 width: 245px;
                 font-size: $font-size-text;
@@ -1821,6 +1833,7 @@ body {
           @include responsive-desktop {
             width: 1044px;
             margin-left: 0px;
+            margin-bottom: 35px;
           }
           h4 {
             font-family: $font-family-title;
@@ -1838,6 +1851,7 @@ body {
             margin-bottom: 20px;
             @include responsive-desktop {
               width: 981px;
+              margin-bottom: 39px;
             }
           }
           form {
@@ -1855,6 +1869,8 @@ body {
               border-style: none;
               font-size: $font-size-text;
               font-weight: 100;
+              text-align: left;
+
               &:last-child {
                 background-color: #9698d6;
                 color: white;
@@ -1873,6 +1889,153 @@ body {
               border-style: none;
               font-size: $font-size-text;
               font-weight: 100;
+
+              @include responsive-desktop {
+                width: 978px;
+                height: 60px;
+                margin-bottom: 45px;
+              }
+            }
+          }
+        }
+        &__company__new {
+          background-color: #ffffff;
+          border-radius: 10px;
+          margin-left: 35px;
+          box-shadow: 0px 0px 37px -21px #00000040;
+          @include responsive-desktop {
+            width: 1044px;
+            margin-left: 0px;
+            margin-bottom: 35px;
+          }
+          h4 {
+            font-family: $font-family-title;
+            font-size: $font-size-text;
+            font-weight: $font-weight-title-dashboard;
+            margin-left: 30px;
+            padding-top: 35px;
+            @include responsive-desktop {
+              width: 1044px;
+              padding-top: 53px;
+            }
+          }
+          hr {
+            border: 1px solid #e0e0e0;
+            margin-bottom: 20px;
+            @include responsive-desktop {
+              width: 981px;
+              margin-bottom: 39px;
+            }
+          }
+          form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            @include responsive-desktop {
+              width: 1044px;
+            }
+            input {
+              margin-bottom: 20px;
+              width: 320px;
+              height: 36px;
+              background-color: #f5f5f5;
+              border-style: none;
+              font-size: $font-size-text;
+              font-weight: 100;
+              text-align: left;
+
+              &:last-child {
+                background-color: #9698d6;
+                color: white;
+              }
+              @include responsive-desktop {
+                width: 978px;
+                height: 60px;
+                margin-bottom: 45px;
+              }
+            }
+            select {
+              margin-bottom: 20px;
+              width: 320px;
+              height: 36px;
+              background-color: #f5f5f5;
+              border-style: none;
+              font-size: $font-size-text;
+              font-weight: 100;
+
+              @include responsive-desktop {
+                width: 978px;
+                height: 60px;
+                margin-bottom: 45px;
+              }
+            }
+          }
+        }
+        &__contact__new {
+          background-color: #ffffff;
+          border-radius: 10px;
+          margin-left: 35px;
+          box-shadow: 0px 0px 37px -21px #00000040;
+          @include responsive-desktop {
+            width: 1044px;
+            margin-left: 0px;
+            margin-bottom: 35px;
+          }
+          h4 {
+            font-family: $font-family-title;
+            font-size: $font-size-text;
+            font-weight: $font-weight-title-dashboard;
+            margin-left: 30px;
+            padding-top: 35px;
+            @include responsive-desktop {
+              width: 1044px;
+              padding-top: 53px;
+            }
+          }
+          hr {
+            border: 1px solid #e0e0e0;
+            margin-bottom: 20px;
+            @include responsive-desktop {
+              width: 981px;
+              margin-bottom: 39px;
+            }
+          }
+          form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            @include responsive-desktop {
+              width: 1044px;
+            }
+            input {
+              margin-bottom: 20px;
+              width: 320px;
+              height: 36px;
+              background-color: #f5f5f5;
+              border-style: none;
+              font-size: $font-size-text;
+              font-weight: 100;
+              text-align: left;
+
+              &:last-child {
+                background-color: #9698d6;
+                color: white;
+              }
+              @include responsive-desktop {
+                width: 978px;
+                height: 60px;
+                margin-bottom: 45px;
+              }
+            }
+            select {
+              margin-bottom: 20px;
+              width: 320px;
+              height: 36px;
+              background-color: #f5f5f5;
+              border-style: none;
+              font-size: $font-size-text;
+              font-weight: 100;
+
               @include responsive-desktop {
                 width: 978px;
                 height: 60px;
@@ -1883,7 +2046,6 @@ body {
         }
       }
     }
-
   }
   #new__invoices {
     display: none;
@@ -1895,7 +2057,6 @@ body {
     display: none;
   }
 }
-
 
 .error {
   min-height: 100vh;
@@ -1963,4 +2124,3 @@ body {
     }
   }
 }
-
